Fixed on mobile Safari

--- a/styles/global.css
+++ b/styles/global.css
@@ -116,10 +116,12 @@ strong {
 }
 
 main {
-  height: 100vh;
+  min-height: 100vh;
+  min-height: 100dvh;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 25px 0;
 }
 
 .attribution {
